View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033230 | Open CASCADE | OCCT:Data Exchange | public | 2022-11-29 17:23 | 2023-01-13 04:46 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.7.1 | ||||
Summary | 0033230: Data Exchange, DE Wrapper - Update API to find CAD provider | ||||
Description | Method for finding provider is protected, it is necessary to make it public. | ||||
Steps To Reproduce | Not possible | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33230 has been created by dpasukhi. SHA-1: 1fad8d99c41a7ac084b4e94883f0bff772c4ba7b Detailed log of new commits: Author: dpasukhi Date: Tue Nov 29 14:38:48 2022 +0000 0033230: Data Exchange, DE Wrapper - Update API to find CAD provider |
|
Branch CR33230 has been updated forcibly by dpasukhi. SHA-1: 4bf5ff510595096f785a19b4d5ec82acee5b387e |
|
Branch CR33230 has been updated forcibly by dpasukhi. SHA-1: 05bc0fc2d822ec81c9e5b2b0f08dfa9923983724 |
|
Dear msv, please review CR33230 FindProvider is virtual public method now. That is why, it is possible to overwrite it in your own class. It helps to analyze and prepare a path before using a DE_Configuration searching by content or extension. Build is OK, see: http://jenkins-test-10.nnov.opencascade.com/view/CR33230-master-dpasukhi/view/PRODUCTS%20compile/ http://jenkins-test-10.nnov.opencascade.com/view/CR33230-master-dpasukhi/view/OCCT%20compile/ |
|
To integrate: occt - CR33230 |
|
Branch CR33230 has been deleted by mnt. SHA-1: 05bc0fc2d822ec81c9e5b2b0f08dfa9923983724 |
occt: master 6cc679d8 2022-11-29 17:38:48 Committer: smoskvin Details Diff |
0033230: Data Exchange, DE Wrapper - Update API to find CAD provider Moved FindProvider method to public section Made FindProvider as virtual to make it possible to overwrite. |
Affected Issues 0033230 |
|
mod - src/DE/DE_Wrapper.cxx | Diff File | ||
mod - src/DE/DE_Wrapper.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-11-29 17:23 | dpasukhi | New Issue | |
2022-11-29 17:23 | dpasukhi | Assigned To | => dpasukhi |
2022-11-29 17:39 | git | Note Added: 0112399 | |
2022-11-29 17:55 | git | Note Added: 0112402 | |
2022-11-29 18:18 | git | Note Added: 0112404 | |
2022-11-29 18:22 | dpasukhi | Assigned To | dpasukhi => msv |
2022-11-29 18:22 | dpasukhi | Status | new => resolved |
2022-11-29 18:22 | dpasukhi | Steps to Reproduce Updated | |
2022-11-29 18:22 | dpasukhi | Note Added: 0112405 | |
2022-11-30 10:09 | msv | Assigned To | msv => bugmaster |
2022-11-30 10:09 | msv | Status | resolved => reviewed |
2022-11-30 10:09 | msv | Note Added: 0112414 | |
2022-12-05 00:22 | smoskvin | Status | reviewed => tested |
2022-12-05 00:25 | smoskvin | Changeset attached | => occt master 6cc679d8 |
2022-12-05 00:25 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2022-12-05 00:25 | dpasukhi | Status | tested => verified |
2022-12-05 00:25 | dpasukhi | Resolution | open => fixed |
2022-12-11 22:37 | git | Note Added: 0112581 | |
2023-01-13 04:46 | vglukhik | Project | Internal => Open CASCADE |