0033230: Data Exchange, DE Wrapper - Update API to find CAD provider

Moved FindProvider method to public section
Made FindProvider as virtual to make it possible to overwrite.